fixes line height on mobile.

--- a/web/static/css/public.css
+++ b/web/static/css/public.css
@@ -50,6 +50,7 @@ body {
 
     & h1 {
       font-size: 1.375rem;
+      line-height: 2rem;
     }
   }
 
